Adição de rodapé e icones das redes sociais

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/nsradobrasil.css">
 
 </head>
 <body>
@@ -28,10 +29,10 @@
                         Menu
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Pedido de Oração</a>
+                        <a class="dropdown-item" href="#">Nossos Frades</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="#">Redes Sociais</a>
                     </div>
                 </li>
             </ul>
@@ -67,6 +68,14 @@
 </div>
 
     </main>
+
+    <footer class="footer bg-light">
+      <div class="container">
+        <img class="img-fluid" src="images/instagram-color.png" style="height: 40px; width: 40px" alt="">
+        <img class="img-fluid" src="images/facebook-color.png" style="height: 40px; width: 40px" alt="">
+        <span class="text-muted">Place sticky footer content here.</span>
+      </div>
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery.min.js"></script>
