--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
 
     <footer class="footer bg-light">
       <div class="container">
-        <img class="img-fluid" src="images/instagram-color.png" style="height: 40px; width: 40px" alt="">
-        <img class="img-fluid" src="images/facebook-color.png" style="height: 40px; width: 40px" alt="">
-        <span class="text-muted">Place sticky footer content here.</span>
+        <div class="text-center">
+            <img class="img-fluid" src="images/instagram-color.png" style="height: 40px; width: 40px" alt="Instagram">
+            nsradobrasil 
+            <img class="img-fluid" src="images/facebook-color.png" style="height: 40px; width: 40px; margin-left: 10px" alt="Facebook">
+            Área Pastoral N. Sra. do Brasil
+        </div>
       </div>
     </footer>
     <!-- Optional JavaScript -->
